back-end/k8s/deploy-pokedex-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pokedex-backend
  namespace: pokedex
  labels:
    app: pokedex-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pokedex-backend
  template:
    metadata:
      labels:
        app: pokedex-backend
    spec:
      containers:
      - name: pokedex-backend
        image: chakorn/pokedex-backend:1.0.2
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
        livenessProbe:
          httpGet:
            path: /api/pokemon/stats
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /api/pokemon/stats
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: pokedex-backend-service
  namespace: pokedex
spec:
  type: NodePort
  selector:
    app: pokedex-backend
  ports:
    - port: 80
      targetPort: 8080
      nodePort: 30001
